<resources>
    <string name="app_name">HealthSaaS EDGE</string>
    <string name="connected_to">Connected to HealthSaaS IoT Platform</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_wifi">Wi-Fi Settings</string>
    <string name="action_settings_bt">BT Settings</string>
    <string name="action_home">Home</string>
    <string name="action_settings_datetime">Date &amp; Time Settings</string>
    <string name="action_feverscout">Fever Scout</string>
    <string name="action_medwell">MedWell</string>
    <string name="action_education">Active Education</string>
    <string name="acting_pulseox">PulseOx</string>
    <string name="action_zewals">BPM/Pedometer/Weight Scale</string>
    <string name="action_about">About…</string>
    <string name="status_no_devices">No Devices\nConfigured</string>
    <string name="status_good">Status Good\nIdle</string>
    <string name="status_data_received">Data Received</string>
    <string name="status_data_sent">Data Sent</string>
    <string name="const_safe_name">EDGESafe</string>
    <string name="about_title">About HealthSaaS EDGE</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="confirm_setup_mode">Confirm Setup Mode</string>
    <string name="button_enable">Enable</string>
    <string name="emergency_call">Emergency Call…</string>
    <string name="filler">testing line 1\ntest line 2</string>
    <string name="filler1">testing line 1 test line 2</string>
    <string name="poweredBy">Powered By HealthSaaS IoT Platform&#8482;</string>
    <string name="copyright">Copyright &#169; 2019 HealthSaaS, Inc.</string>
</resources>
