<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.healthsaas.edge.MainActivity" >
    <item android:id="@+id/action_education"
        android:title="@string/action_education"
        android:orderInCategory="10"
        app:showAsAction="never" />
    <item android:id="@+id/action_feverscout"
        android:title="@string/action_feverscout"
        android:orderInCategory="20"
        app:showAsAction="never" />
    <item android:id="@+id/action_medwell"
        android:title="@string/action_medwell"
        android:orderInCategory="20"
        app:showAsAction="never" />
    <item android:id="@+id/action_pulseox"
        android:title="@string/acting_pulseox"
        android:orderInCategory="30"
        app:showAsAction="never" />
    <item android:id="@+id/action_zewals"
        android:title="@string/action_zewals"
        android:orderInCategory="40"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:visible="false"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings_wifi"
        android:title="@string/action_settings_wifi"
        android:visible="false"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings_bt"
        android:title="@string/action_settings_bt"
        android:visible="false"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings_datetime"
        android:title="@string/action_settings_datetime"
        android:visible="false"
        android:orderInCategory="400"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="900"
        app:showAsAction="never" />
</menu>
